# OS

./: .gitignore
Lab1/: .gitignore  CMakeLists.txt
Lab1/.github/workflows/: ci.yml
Lab1/CI/: run-clang-tidy-checks.sh  run-tests.sh
Lab1/LinearRegression/: CMakeLists.txt  LinearRegression.cpp
Lab1/SystemLoaders/: CMakeLists.txt
Lab1/SystemLoaders/LinearRegression/: LinearRegression.cpp
Lab1/benchmarks/: CMakeLists.txt  benchmarks.cpp
Lab1/include/: shell.h
Lab1/src/: main.cpp
Lab1/src/Shell/: shell.cpp
